--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,13 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+* > * {
+  font-family: "Poppins", sans-serif;
 }
 
 a {
@@ -30,6 +27,6 @@ a {
 }
 
 .input-text {
-  @apply mt-1 block w-60 px-3 py-2 bg-white border border-slate-300  text-sm shadow-sm placeholder-slate-500;
+  @apply block px-3 py-2 mt-1 text-sm bg-white border shadow-sm w-60 border-slate-300 placeholder-slate-500;
   @apply rounded-full focus:outline-none focus:border-sky-500 focus:ring-2 focus:ring-sky-500;
 }
